// Code generated by sheeter. DO NOT EDIT.
// Sheeter: https://github.com/yinweli/Sheeter

syntax = "proto3";
package sheeterProto;

import 'reward.proto';
import 'wallet.proto';

option go_package = ".;sheeterProto";

message ExampleData2 {
  optional Reward Reward = 1; //
  optional Wallet Wallet = 2; //
  optional int32 Ignore = 3; // 忽略
  optional string Key = 4; // 索引
  optional string Name = 5; // 名稱
}

message ExampleData2Storer {
  map<string, ExampleData2> Datas = 1;
}
